--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "parcel-plugin-static-files-copy": "^2.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "src": "^1.1.2"
   },
   "staticFiles": {
