--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   "dependencies": {
     "app": "^0.1.0",
     "aws-sdk": "^2.1486.0",
+    "d3-fetch": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "parcel-plugin-static-files-copy": "^2.6.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-simple-maps": "^2.0.0",
     "src": "^1.1.2"
   },
   "staticFiles": {
