--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build": "parcel build ./src/index.html"
+    "build": "parcel build ./src/index.html --detailed-report 20"
   },
   "keywords": [],
   "author": "",
